fix: add style pages/landing About

--- a/online-zoo/pages/main/sass/_style.scss
+++ b/online-zoo/pages/main/sass/_style.scss
@@ -28,7 +28,7 @@ $headerHeigth: -80px;
 }
 
 %fontRobotoH1 {
-    font-family: 'Roboto', Arial, Helvetica, sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 19.0145px;
@@ -36,7 +36,7 @@ $headerHeigth: -80px;
 }
 
 %fontLink {
-    font-family: 'Roboto';
+    font-family: 'Roboto', sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
@@ -44,12 +44,12 @@ $headerHeigth: -80px;
 }
 
 %fontFamilyRoboto {
-    font-family: 'Roboto', Arial, Helvetica, sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-style: normal;
 }
 
 %font_style_button {
-    font-family: 'Roboto';
+    font-family: 'Roboto', sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
@@ -57,7 +57,7 @@ $headerHeigth: -80px;
 }
 
 %font_title {
-    font-family: 'Roboto';
+    font-family: 'Roboto', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 48px;
@@ -65,7 +65,7 @@ $headerHeigth: -80px;
 }
 
 %smallParagraph {
-    font-family: 'Roboto';
+    font-family: 'Roboto', sans-serif;
     font-style: normal;
     font-weight: 300;
     font-size: 15px;
@@ -73,7 +73,7 @@ $headerHeigth: -80px;
 }
 
 %font__h3 {
-    font-family: 'Roboto';
+    font-family: 'Roboto', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 36px;
