--- a/online-zoo/pages/donate/css/style.scss
+++ b/online-zoo/pages/donate/css/style.scss
@@ -82,15 +82,11 @@
     margin-right: 64px;
 }
 
-.donate__line {
-
-}
-
 .line__text {
     margin-bottom: 17px;
     width: 976px;
     margin: 0 auto;
-    font-family: 'Roboto';
+    font-family: 'Roboto',sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
@@ -196,7 +192,7 @@ margin: 0 auto;
 
 .input__list-text {
     margin-right: 50px;
-    font-family: 'Roboto';
+    font-family: 'Roboto', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
