--- a/online-zoo/pages/donate/css/style.scss
+++ b/online-zoo/pages/donate/css/style.scss
@@ -53,6 +53,10 @@
     justify-content: center;
 }
 
+.donate__line {
+    height: 273px;
+}
+
 .column__wrap {
     margin-right: 11px;
     display: flex;
@@ -83,7 +87,7 @@
 }
 
 .line__text {
-    margin-bottom: 17px;
+    padding: 0 0 17px 0;
     width: 976px;
     margin: 0 auto;
     font-family: 'Roboto',sans-serif;
@@ -111,6 +115,7 @@ margin: 0 auto;
     align-items: center;
     position: relative;
     z-index: 2;
+    margin-bottom: 12px;
 
     &::before {
         content: '';
@@ -147,8 +152,124 @@ margin: 0 auto;
     }
 }
 
+.elipse__circle--active {
+    position: relative;
+    &::before {
+        content: '';
+        background: url(../../../assets/images/Vector1.svg), no-repeat;
+        position: absolute;
+        top: -15px;
+        left: -15px;
+        right: -15px;
+        bottom: -15px;
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        /* background: $orange13; */
+    }
+
+    &::after {
+        content: '';
+        position: absolute;
+        width: 22.95px;
+        height: 22.95px;
+        top: -6.5px;
+        left: -6.5px;
+        right: -6.5px;
+        bottom: -6.5px;
+        background: url(../../../assets/images/Vector2.svg), no-repeat;
+        z-index: 5;
+    }
+}
+
+.price__list {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    margin-bottom: 50px;
+}
+
+.price__item:nth-child(1) {
+    margin-right: 73px;
+    width: 57px;
+    height: 36px;
+}
+
+.price__item:nth-child(2) {
+    margin-right: 73px;
+    width: 57px;
+    height: 36px;
+}
+
+.price__item:nth-child(3) {
+    margin-right: 52px;
+    width: 78px;
+    height: 36px;
+}
+
+.price__item:nth-child(4) {
+    margin-right: 73px;
+    width: 57px;
+    height: 36px;
+}
+
+.price__item:nth-child(5) {
+    margin-right: 73px;
+    width: 57px;
+    height: 36px;
+}
+
+.price__item:nth-child(6) {
+    margin-right: 58px;
+    width: 72px;
+    height: 36px;
+}
+
+.price__item:nth-child(7) {
+    margin-right: 88px;
+    width: 71px;
+    height: 36px;
+}
+
+.price__text {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 26px;
+    line-height: 140%;
+    /* or 36px */
+    text-transform: uppercase;
+    color: #333B41;
+    position: relative;
+    display: flex;
+    align-items: center;
+
+    &::before {
+        content: '';
+        /* position: absolute; */
+        display: inline-block;
+        text-align: center;
+        margin-right: 2px;
+        background: url(../../../assets/images/dollar.svg), no-repeat;
+        width: 10px;
+        height: 20px;
+    }
+}
+
+.price__text--active {
+    color: $orange13;
+
+    &::before {
+       background: url(../../../assets/images/dollar__active.svg), no-repeat;
+    }
+}
+
 .another {
     margin-bottom: 86px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 
 .another__amount-container {
@@ -156,7 +277,15 @@ margin: 0 auto;
     align-items: center;
     justify-content: center;
     margin-bottom: 25px;
-    margin-top: 50px;
+
+    &::after {
+        content: '';
+        display: block;
+        background: url(../../../assets/images/dollar__input.svg);
+        margin-left: -20px;
+        width: 10px;
+        height: 20px;
+    }
 }
 
 .another__amount {
@@ -166,19 +295,65 @@ margin: 0 auto;
     height: 54px;   
     background: transparent;
     padding: 16px 0 16px 9px;
+
+    &:focus {
+        outline: none;
+        border: 1px solid #FFEE2E;
+    }
+}
+
+.input__list-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
 }
 
 .input__list-container {
-    margin-bottom: 30px;
+    margin-bottom: 31px;
 }
 
 .input__list-container {
     display: flex;
     align-items: center;
-    justify-content: center;
     background: transparent;
-    margin-bottom: 30px;
+
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    border: 1px solid $orange13;
+    margin-right: 150px;
+    position: relative;
+} 
+
+.input__list {
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    border: 1px solid $orange13;
 }
+
+.input__list--style {
+    margin-right: 20px;
+}
+
+/* .input__list-container .input__list--style {
+    width: 5px;
+    height: 5px;
+    background: $orange13;
+    display: none;
+   /*  position: absolute;
+    left: 50%;
+    bottom: 50%; */
+//}
+/* 
+.input__list-container .input__list {
+   display: none; 
+}
+
+.input__list-container .input__list:checked + .input__list--style {
+    display: inline-block;
+} */ 
 
 .input__list {
     margin-right: 10px;
@@ -187,7 +362,6 @@ margin: 0 auto;
     height: 16px;
     border-radius: 50%;
     background: transparent;    
-    appearance: none;
 }
 
 .input__list-text {
@@ -200,10 +374,29 @@ margin: 0 auto;
     color: #333B41;
 }
 
-.input__list-text:last-child {
+/* .input__list-text:last-child {
     margin-right: 0;
+} */
+
+.donate__btn-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .pick__btn {
-    margin-top: 170px;
+    margin-top: 31px;
+    margin-bottom: 0;
+}
+
+.pick__end-text {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 140%;
+    color: #333B41;
+    margin-top: 30px;
+    padding-bottom: 62px;
 }
