--- a/online-zoo/pages/main/sass/style.css
+++ b/online-zoo/pages/main/sass/style.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 .footer__box:nth-child(1) .footer__item-contact i, .testimonials__scroollbar, .testimonials__inner .testimonials__wrap, .works__contrainer, .navigation__list, .logo {
   display: flex;
   align-items: center;
@@ -50,6 +51,18 @@
   line-height: 18px;
 }
 
+@media (max-width: 804px) {
+  .works__box-title, .btn__wrap .slider__btn, .slide__container .slide__title, .backstage__text, .designed .designed__text, .navigation__link {
+    font-size: 12px;
+    line-height: 18px;
+  }
+}
+@media (max-width: 640px) {
+  .title {
+    font-size: 12.2899px;
+    line-height: 120%;
+  }
+}
 html {
   box-sizing: border-box;
 }
@@ -841,6 +854,377 @@ h3.backstage__title {
 }
 .footer__box:nth-child(3) .footer__dev-link .footer__text-avtor + .footer__text-avtor {
   margin-top: 10px;
+}
+
+@media (max-width: 1599px) {
+  .btn__wrap {
+    margin-bottom: 132px;
+  }
+  .slider__wrap-flower {
+    bottom: -136px;
+    left: -5px;
+  }
+  .slider__wrap-flower--right {
+    left: initial;
+    right: 5px;
+  }
+  .backstage__wrap {
+    column-gap: 31px;
+  }
+  .backstage__flower {
+    display: none;
+  }
+}
+@media (max-width: 1372px) {
+  .slide__container {
+    row-gap: 92px;
+    grid-template-columns: repeat(3, 294px);
+  }
+  .slider__wrap {
+    position: relative;
+  }
+  .slider__pagination {
+    position: absolute;
+    left: 322px;
+  }
+  .slider__pagination--right {
+    left: initial;
+    right: 322px;
+  }
+  .slide__container .slide__box::after {
+    height: 291px;
+  }
+}
+@media (max-width: 1250px) {
+  .header__inner {
+    justify-content: space-between;
+  }
+  .container {
+    max-width: 940px;
+  }
+  .designed {
+    margin-left: 0;
+  }
+  .slide__container .slide::before {
+    margin: -1.5px;
+  }
+  .footer__inner {
+    grid-template-columns: 298px 1fr;
+  }
+  .footer__box:last-child {
+    grid-column: 2/3;
+    order: 0;
+    justify-self: end;
+  }
+  .footer__box:nth-child(2) {
+    order: 1;
+    grid-column: 2/3;
+  }
+  .testimonials__inner .testimonials__wrap {
+    flex-basis: 293px;
+  }
+  .testimonials__inner .testimonials__box:last-child {
+    display: none;
+  }
+}
+@media (max-width: 1000px) {
+  .header {
+    z-index: 2;
+  }
+  .navigation {
+    margin-left: -142px;
+  }
+  .navigation__list {
+    margin-left: -53px;
+  }
+  .watch {
+    height: 584px;
+    background-image: url(../../../assets/images/Giant_Panda.jpg);
+    background-size: initial;
+    margin-top: -160px;
+    margin-bottom: 100px;
+  }
+  .watch__inner {
+    margin-right: 56px;
+    margin-top: 80px;
+  }
+  .watch__title {
+    margin-top: 43px;
+    font-size: 85px;
+    line-height: 75%;
+    margin-bottom: 40px;
+  }
+  .watch__box {
+    position: relative;
+    margin-top: 80px;
+  }
+  .watch__box::before {
+    z-index: 1;
+    left: -61px;
+    top: -13px;
+    width: 367px;
+    height: 367px;
+  }
+  .watch__btn {
+    margin-right: 51px;
+  }
+  .backstage {
+    margin-bottom: 152px;
+  }
+  .backstage__title--margin {
+    margin-top: 54px;
+  }
+  .backstage__text {
+    margin-bottom: 54px;
+  }
+  .backstage__text:last-child {
+    margin-bottom: 0;
+  }
+  .slider__pagination {
+    left: 340px;
+  }
+  .slider__pagination--right {
+    right: 340px;
+    left: initial;
+  }
+  .pick {
+    padding: 30px 0 50px;
+  }
+  .pick__inner .pick__title {
+    padding: 30px 0 20px 0;
+  }
+  .pick__inner .pick__subtitle {
+    padding-bottom: 20px;
+  }
+  .pick__inner .pick__text.pick__text--weight {
+    margin-bottom: 40px;
+  }
+  .pick__br {
+    display: none;
+  }
+  .pick__inner .pick__subtitle {
+    margin-left: 49px;
+  }
+  .pick__inner .pick__text {
+    margin-left: 49px;
+  }
+  .works__arrow {
+    margin-top: -146px;
+  }
+  .works__box {
+    margin-bottom: 70px;
+  }
+  .pick__btn {
+    margin-bottom: 50px;
+  }
+  .testimonials {
+    padding-top: 100px;
+  }
+  .testimonials__inner h2.testimonials__title {
+    margin-bottom: 30px;
+  }
+  .testimonials__wrap {
+    margin-bottom: 20px;
+  }
+  .testimonials__inner .testimonials__box {
+    max-width: initial;
+    height: 391px;
+  }
+  .testimonials__box-row {
+    margin-bottom: 10px;
+  }
+  .testimonials__content {
+    color: #767474;
+  }
+  .testimonials__scroollbar {
+    width: 390px;
+    margin-bottom: 52px;
+  }
+  .testimonials__scroollbar-slider {
+    width: 75px;
+  }
+  .testimonials__btn {
+    margin-bottom: 140px;
+  }
+  .footer__box:last-child {
+    margin-left: 241px;
+    row-gap: 155px;
+    position: absolute;
+    right: 53px;
+  }
+  .navigation__item + .navigation__item {
+    margin-left: 48px;
+  }
+}
+@media (max-width: 999px) {
+  .watch {
+    margin-bottom: 0;
+  }
+  .backstage .container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .backstage__wrap {
+    flex-basis: auto;
+  }
+  .slide__container {
+    row-gap: 92px;
+    grid-template-columns: repeat(2, 294px);
+  }
+  .slide--none {
+    display: none;
+  }
+  .testimonials__wrap {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  .testimonials__inner .testimonials__box {
+    height: initial;
+  }
+  .footer__inner {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .footer__box:nth-child(1) {
+    grid-column: 1/3;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+  }
+  .footer__box:nth-child(1) .logo {
+    grid-column: 1/2;
+    grid-row: 1/2;
+  }
+  .footer__box:nth-child(1) .footer__btn-container {
+    grid-column: 1/2;
+    grid-row: 2/3;
+  }
+  .footer__box:nth-child(1) .footer__list-contact {
+    grid-column: 2/3;
+    grid-row: 1/3;
+    justify-self: end;
+  }
+  .footer__box:nth-child(1) .footer__link-text {
+    display: none;
+  }
+  .footer__box:nth-child(2) {
+    grid-column: 1/2;
+    grid-row: 2/3;
+  }
+  .footer__box:nth-child(3) {
+    grid-column: 2/3;
+    grid-row: 2/3;
+    position: initial;
+    margin-left: initial;
+    display: block;
+  }
+  .wrap--none {
+    display: none;
+  }
+  .navigation__list {
+    margin-left: initial;
+  }
+  .backstage__picture {
+    display: none;
+  }
+  .backstage__flower {
+    display: block;
+    position: initial;
+  }
+}
+@media (max-width: 870px) {
+  .watch {
+    background-image: url(../../../assets/images/media__img/panda__sec1_bg.jpg);
+    background-size: cover;
+    background-position-y: -34px;
+  }
+}
+@media (max-width: 804px) {
+  .works__wrap {
+    gap: 42px;
+    flex-basis: 168px;
+    align-items: flex-start;
+  }
+  .works__box {
+    margin-bottom: 40px;
+    width: 168px;
+  }
+  .works__arrow {
+    display: none;
+  }
+  .watch__title {
+    font-size: 54.2894px;
+    line-height: 75%;
+  }
+  .watch__box::before {
+    width: 237.6px;
+    height: 237.6px;
+    top: initial;
+  }
+}
+@media (max-width: 710px) {
+  .logo__title {
+    border: none;
+  }
+  .navigation {
+    background: url(../../../assets/images/media__img/burger_menu.svg);
+    background-repeat: no-repeat;
+    width: 18px;
+    height: 10px;
+    margin-right: 13px;
+  }
+  .navigation__list {
+    display: none;
+  }
+  .designed {
+    display: none;
+  }
+}
+@media (max-width: 640px) {
+  .container {
+    max-width: 600px;
+  }
+  .header__inner {
+    height: 34px;
+  }
+  .logo__title::after {
+    background: no-repeat, url(../../../assets/images/media__img/640px/bamboo.svg);
+    width: 9px;
+    height: 14px;
+    left: 6px;
+  }
+  .navigation {
+    margin: 0;
+  }
+  .watch {
+    margin-top: -34px;
+    height: 373px;
+  }
+  .watch__inner {
+    margin-right: 0;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 54px;
+    margin-top: 34px;
+  }
+  .watch__box {
+    grid-row: 1/2;
+    grid-column: 1/2;
+    margin-top: 0;
+  }
+  .watch__title {
+    height: 204px;
+  }
+  .watch__box::before {
+    left: 313px;
+    top: 7px;
+  }
+  .watch__btn {
+    grid-column: 1/2;
+    grid-row: 2/3;
+    margin-top: -44px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
