feat: add responsive 640px

--- a/online-zoo/pages/main/sass/_style.scss
+++ b/online-zoo/pages/main/sass/_style.scss
@@ -9,6 +9,7 @@ $line_scroll: #F5F7F6;
 $black_footer: #111115;
 $green: #4B9200;
 $gray5: #767474;
+$gray2: #4F4F4F;
 $hover_orange: #E47209;
 
 $headerHeigth: -80px;
