--- a/online-zoo/pages/main/sass/main.scss
+++ b/online-zoo/pages/main/sass/main.scss
@@ -1383,12 +1383,13 @@ h3.backstage__title {
         margin-right: 0;
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 1fr 54px;
+        grid-template-rows: 300px;
         margin-top: $headerHeigth640;
 
     }
 
     .watch__box {
+        align-self: baseline;
         grid-row: 1 / 2; 
         grid-column: 1 / 2;
         margin-top: 0;
@@ -1405,10 +1406,194 @@ h3.backstage__title {
 
     .watch__btn {
         grid-column: 1 / 2;
-        grid-row: 2 / 3;
+        grid-row: 1 / 2;
         margin-top: -44px;
     }
 
+    h2.backstage__title  {
+        font-size: 48px;
+        line-height: 58px; 
+        padding-left: 8px;
+        margin-top: -30px;
+    }
+
+    /* .backstage__text:last-child {
+        margin-bottom: 8px;
+    } */
+
+    .backstage {
+        margin-bottom: 29px;
+    }
+
+    .backstage__text {
+        font-size: 16px;
+        padding-left: 5px;
+    }
+
+
+    .backstage__wrap {
+        column-gap: normal;
+    }
+
+    .backstage__flower {
+        margin-top: -45px;
+        margin-right: -23px;
+    }
+
+    h3.backstage__title {  
+        margin-top: 30px;
+        margin-bottom: 20px;
+        padding-left: 9px;
+    }
+
+    .slide__container {
+        grid-template-columns: repeat(2, 285px);
+        grid-template-rows: repeat(2, 332px)
+    }
+
+    .slide__box {
+        height: 285px;
+    }
+
+    .slide__container .slide__box::after {
+        height: 285px;
+    }
+
+    .slide__container .slide__title {
+        /* font-size: 12.4695px;
+        line-height: 17px; */
+    }
+
+    .slider__pagination {
+        left: 240px;
+        top: 342px;
+    
+    }
+
+
+    .slider__pagination--right {
+        right: 231px;
+        left: initial;
+    }
+
+    .slide__container .subtitle {
+        font-size: 11.7px;
+        line-height: 14px;
+    }
+
+    .slide__container .fruit::after {
+        background: no-repeat, url(.././../../assets/images/media__img/640px/banana-bamboo_icon.svg);
+        width: 26px;
+        height: 29px;
+    }
+
+    .slide__container .meat::after {
+        background: no-repeat, url(.././../../assets/images/media__img/640px/meet-fish_icon.svg);
+        width: 37px;
+        height: 29px;
+    }
+
+    .btn__wrap {
+        margin-top: 60px;
+    }
+
+    .btn__wrap .slider__btn {
+        font-size: 16px;
+        line-height: 22px;
+    }
+
+    .slider__wrap-flower {
+        bottom: -103px;
+        left: -2px;
+    }
+
+    .slider__wrap-flower--right {
+        left: initial;
+        right: -15px;
+    }
+
+    .pick {
+        margin-top: -33px;
+        padding: 20px 0 20px;
+    }
+
+    .pick .container {
+        max-width: 640px;
+    }
+
+    .pick__inner {
+        padding:  0 20px;
+    }
+    .pick__inner .pick__title  {
+        padding: 10px 0 20px 0;
+        font-size: 42px;     
+        line-height: 50px;
+    }
+
+    .pick__inner .pick__subtitle {
+        font-size: 22px;
+        line-height: 26px;
+    }
+
+    .pick__inner .pick__subtitle {
+        margin-left: 0;
+    }
+
+    .pick__inner .pick__text {
+        margin-left: 0;
+    }
+
+    .pick__inner .pick__text.pick__text--weight {
+        margin-bottom: 30px;
+    }
+   
+    .works__title {
+        margin-bottom: 20px;
+    }
+
+    .works__box-title {
+        font-size: 16px;
+        line-height: 22px;
+    }
+
+    .pick__btn {
+        margin-bottom: 60px;
+    }
+
+    .testimonials {
+        padding-top: 60px;
+    }
+
+    .testimonials__inner .testimonials__box {
+        height: 109px;
+    }
+
+    .testimonials__content {
+        font-size: 15px;
+        line-height: 18px;
+        color: $gray2;
+        margin-top: -5px;
+        padding-left: 5px;
+    }
+
+    .testimonials__scroollbar {
+        display: none;
+    }
+
+    .testimonials__inner .testimonials__wrap  {
+        gap: 15px;
+    }
+
+    .testimonials__btn {
+        margin: 21px auto 80px;
+        display: block;
+        width: 240px;
+    }
+
+    .testimonials .leav__container {
+        right: -12px;
+        bottom: -155px;
+    }
 }
 
 
