feat: add  adaptiv 640px footer

--- a/online-zoo/pages/main/sass/style.css
+++ b/online-zoo/pages/main/sass/style.css
@@ -1182,6 +1182,9 @@ h3.backstage__title {
   }
 }
 @media (max-width: 640px) {
+  body {
+    overflow-x: hidden;
+  }
   .container {
     max-width: 600px;
   }
@@ -1226,17 +1229,20 @@ h3.backstage__title {
     grid-row: 1/2;
     margin-top: -44px;
   }
+  .backstage__box {
+    max-width: 495px;
+  }
   h2.backstage__title {
     font-size: 48px;
     line-height: 58px;
     padding-left: 8px;
-    margin-top: -30px;
+    margin-top: 25px;
   }
   /* .backstage__text:last-child {
       margin-bottom: 8px;
   } */
   .backstage {
-    margin-bottom: 29px;
+    margin-bottom: 80px;
   }
   .backstage__text {
     font-size: 16px;
@@ -1247,7 +1253,11 @@ h3.backstage__title {
   }
   .backstage__flower {
     margin-top: -45px;
-    margin-right: -23px;
+    margin-right: 0px;
+    top: -40px;
+    position: absolute;
+    right: 0;
+    margin-top: 0;
   }
   h3.backstage__title {
     margin-top: 30px;
@@ -1303,7 +1313,7 @@ h3.backstage__title {
   }
   .slider__wrap-flower--right {
     left: initial;
-    right: -15px;
+    right: 0;
   }
   .pick {
     margin-top: -33px;
@@ -1333,6 +1343,24 @@ h3.backstage__title {
   .pick__inner .pick__text.pick__text--weight {
     margin-bottom: 30px;
   }
+  .works__box--arrow-green {
+    position: relative;
+  }
+  .works__box--arrow-green::before {
+    content: "";
+    position: absolute;
+    background: no-repeat url(../../../assets/images/media__img/640px/arrow_green.svg);
+    width: 89px;
+    height: 29px;
+    top: 0;
+    right: 0;
+    z-index: 2;
+    top: -17px;
+    left: 134px;
+  }
+  .works__contrainer:nth-child(3)::before {
+    content: "";
+  }
   .works__title {
     margin-bottom: 20px;
   }
@@ -1348,6 +1376,7 @@ h3.backstage__title {
   }
   .testimonials__inner .testimonials__box {
     height: 109px;
+    max-width: 600px;
   }
   .testimonials__content {
     font-size: 15px;
@@ -1368,8 +1397,59 @@ h3.backstage__title {
     width: 240px;
   }
   .testimonials .leav__container {
-    right: -12px;
+    right: 0px;
     bottom: -155px;
+  }
+  /*  .backstage__flower {
+       overflow-x: hidden;
+   }
+
+   .slider__wrap-flower--right {
+       overflow-x: hidden;
+   }
+
+   .leav__container {
+       overflow-x: hidden;
+   } */
+  .footer {
+    padding: 13.5px 0 12px;
+  }
+  .footer__inner .logo__title {
+    border: 1px solid #fff;
+    font-size: 19.0145px;
+    line-height: 23px;
+  }
+  .footer__inner {
+    grid-template-rows: 204px;
+  }
+  .footer__inner .logo {
+    height: 52px;
+    width: 82px;
+  }
+  .footer__box:nth-child(1) {
+    grid-template-rows: 84px 1fr;
+  }
+  .footer__box:nth-child(1) .footer__item-contact + .footer__item-contact {
+    margin-top: 20px;
+  }
+  .footer__box:nth-child(1) .footer__item-contact i {
+    margin-right: 0;
+  }
+  .footer__box {
+    grid-template-rows: 56px 176px;
+  }
+  .footer__box:nth-child(1) .logo {
+    margin: 0;
+  }
+  .footer .navigation__list {
+    display: flex;
+  }
+  .footer__box:nth-child(2) .navigation__link {
+    font-size: 16px;
+    line-height: 22px;
+  }
+  .navigation__item + .navigation__item {
+    margin-left: 37px;
   }
 }
 
