--- a/online-zoo/pages/main/sass/style.css
+++ b/online-zoo/pages/main/sass/style.css
@@ -1,6 +1,20 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
-.footer__box:nth-child(1) .footer__item-contact i, .testimonials__scroollbar, .testimonials__inner .testimonials__wrap, .works__contrainer, .navigation__list, .logo {
+.burger__title {
+  font-size: 15.2116px;
+  line-height: 120%;
+}
+
+.designed__text, .burger__link, .burger__title {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 22px;
+  /* or 140% */
+}
+
+.footer__box:nth-child(1) .footer__item-contact i, .testimonials__scroollbar, .testimonials__inner .testimonials__wrap, .works__contrainer, .navigation__list, .burger__title, .logo {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -134,6 +148,95 @@ button {
 
 .navigation {
   margin-left: 67.75px;
+}
+
+.burger__icon {
+  cursor: pointer;
+}
+
+.burger {
+  background: rgba(0, 0, 0, 0.7);
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 100%;
+  z-index: 5;
+  transition: left 400ms ease-in-out;
+}
+
+.burger--active {
+  left: 0;
+}
+
+.burger__wrap {
+  max-width: 640px;
+  height: 329px;
+  background: #fff;
+  z-index: 4;
+  padding: 10px 10px;
+  position: relative;
+}
+
+.close__burger {
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.burger__title {
+  border: 1px solid #FE9013;
+  color: #FE9013;
+  width: 58px;
+  height: 36px;
+  text-align: center;
+  position: relative;
+  margin-bottom: 30px;
+}
+.burger__title::before {
+  content: "";
+  background: no-repeat url(../../../assets/images/bamboo__orange.svg);
+  width: 10px;
+  height: 16px;
+  position: absolute;
+  bottom: 7px;
+  left: 6px;
+}
+
+.burger__menu {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin-bottom: 15px;
+}
+.burger__menu .burger__item + .burger__item {
+  margin-top: 15px;
+}
+
+.burger__link {
+  color: #333B41;
+}
+.burger__link:hover {
+  text-decoration: underline;
+}
+.burger__link:active {
+  color: #4B9200;
+}
+
+.designed__text {
+  color: #333B41;
+}
+.designed__text:hover {
+  text-decoration: underline;
+}
+.designed__text:active {
+  color: #4B9200;
 }
 
 .navigation__list {
@@ -1167,13 +1270,13 @@ h3.backstage__title {
   .logo__title {
     border: none;
   }
-  .navigation {
-    background: url(../../../assets/images/media__img/burger_menu.svg);
-    background-repeat: no-repeat;
-    width: 18px;
-    height: 10px;
-    margin-right: 13px;
-  }
+  /* .navigation {
+      background: url(../../../assets/images/media__img/burger_menu.svg);
+      background-repeat: no-repeat;
+      width: 18px;
+      height: 10px;
+      margin-right: 13px;
+  } */
   .navigation__list {
     display: none;
   }
