--- a/online-zoo/pages/main/sass/main.scss
+++ b/online-zoo/pages/main/sass/main.scss
@@ -104,7 +104,7 @@ button{
 }
 
 .burger__wrap {
-    max-width: 640px;
+    max-width: 100%;
     height: 329px;
     background: #fff;
     z-index: 4;
@@ -280,7 +280,7 @@ button{
     text-transform: uppercase;
     color: $white;
     position: relative;
-    z-index: 2;
+    z-index: 1;
     margin-top: 86px;
     margin-bottom: 60px;
 
@@ -303,7 +303,7 @@ button{
     @extend %font_style_button;
     margin-right: 99px;
     position: relative;
-    z-index: 2;
+    z-index: 1;
 
       /* &::before {
         content: "";
