--- a/online-zoo/pages/main/sass/style.css
+++ b/online-zoo/pages/main/sass/style.css
@@ -170,7 +170,7 @@ button {
 }
 
 .burger__wrap {
-  max-width: 640px;
+  max-width: 100%;
   height: 329px;
   background: #fff;
   z-index: 4;
@@ -323,7 +323,7 @@ button {
   text-transform: uppercase;
   color: #fff;
   position: relative;
-  z-index: 2;
+  z-index: 1;
   margin-top: 86px;
   margin-bottom: 60px;
 }
@@ -344,7 +344,7 @@ button {
   color: #fff;
   margin-right: 99px;
   position: relative;
-  z-index: 2;
+  z-index: 1;
   /* &::before {
       content: "";
       display: block;
