--- a/codeJam/style/style.css
+++ b/codeJam/style/style.css
@@ -16,10 +16,10 @@ body {
 
 .container {
     border: 1px solid black;
-    width: 500px;
-    height: 500px;
+    width: 400px;
+    height: 400px;
     display: grid;
-    
+    position: relative;
 }
 
 .box {
@@ -30,7 +30,92 @@ body {
     font-size: 50px;
     border: 0.25px solid black;
     background-color: rgb(189, 186, 186);
+    position: absolute;
+    width: 100px;
+    height: 100px;
 }
+
+.box[data-position = '1'] {
+    top: 0;
+    left: 0;
+}
+
+.box[data-position = '2'] {
+    top: 0;
+    left: 100px;
+}
+
+.box[data-position = '3'] {
+    top: 0;
+    left: 200px;
+}
+
+.box[data-position = '4'] {
+    top: 0;
+    left: 300px;
+}
+
+.box[data-position = '5'] {
+    top: 100px;
+    left: 0;
+}
+
+.box[data-position = '6'] {
+    top: 100px;
+    left: 100px;
+}
+
+.box[data-position = '7'] {
+    top: 100px;
+    left: 200px;
+}
+
+.box[data-position = '8'] {
+    top: 100px;
+    left: 300px;
+}
+
+.box[data-position = '9'] {
+    top: 200px;
+    left: 0px;
+}
+
+.box[data-position = '10'] {
+    top: 200px;
+    left: 100px;
+}
+
+.box[data-position = '11'] {
+    top: 200px;
+    left: 200px;
+}
+
+.box[data-position = '12'] {
+    top: 200px;
+    left: 300px;
+}
+
+.box[data-position = '13'] {
+    top: 300px;
+    left: 0px;
+}
+
+.box[data-position = '14'] {
+    top: 300px;
+    left: 100px;
+}
+
+.box[data-position = '15'] {
+    top: 300px;
+    left: 200px;
+}
+
+.box[data-position = '16'] {
+    top: 300px;
+    left: 300px;
+}
+
+
 
 .btn__box {
     margin-top: 100px;
@@ -75,3 +160,9 @@ body {
 .hard .span:nth-child(2) {
     margin-left: 10px;
 }
+
+/* .box[data-position='1'] {
+    position: absolute;
+    left: 0;
+    right: 0;
+} */
